# swagger_docs.json
@@ -71,46 +71,6 @@
           }
         ],
         "responses": {}
-      },
-      "put": {
-        "tags": [
-          "Education"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      },
-      "delete": {
-        "tags": [
-          "Education"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/education/": {
-      "post": {
-        "tags": [
-          "Education"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {}
       }
     },
     "/experience/{id}": {
@@ -127,46 +87,6 @@
             "type": "string"
           }
         ],
-        "responses": {}
-      },
-      "put": {
-        "tags": [
-          "Experience"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      },
-      "delete": {
-        "tags": [
-          "Experience"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/experience/": {
-      "post": {
-        "tags": [
-          "Experience"
-        ],
-        "description": "",
-        "parameters": [],
         "responses": {}
       }
     },
@@ -185,46 +105,6 @@
           }
         ],
         "responses": {}
-      },
-      "put": {
-        "tags": [
-          "Projects"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      },
-      "delete": {
-        "tags": [
-          "Projects"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/projects/": {
-      "post": {
-        "tags": [
-          "Projects"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {}
       }
     },
     "/resume_cv/{id}": {
@@ -242,46 +122,6 @@
           }
         ],
         "responses": {}
-      },
-      "put": {
-        "tags": [
-          "Resume"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      },
-      "delete": {
-        "tags": [
-          "Resume"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/resume_cv/": {
-      "post": {
-        "tags": [
-          "Resume"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {}
       }
     },
     "/tools_and_ethics/{id}": {
@@ -298,46 +138,6 @@
             "type": "string"
           }
         ],
-        "responses": {}
-      },
-      "put": {
-        "tags": [
-          "Tools"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      },
-      "delete": {
-        "tags": [
-          "Tools"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/tools_and_ethics/": {
-      "post": {
-        "tags": [
-          "Tools"
-        ],
-        "description": "",
-        "parameters": [],
         "responses": {}
       }
     }
